--- a/css/quiz.css
+++ b/css/quiz.css
@@ -37,7 +37,7 @@
 /* 姓名輸入頁 */
 #namePage {
     text-align: center;
-    background: #fff;
+    background: rgba(0, 178, 233, 0.562);
     color: #111;
     padding: 30px;
     border-radius: 8px;
